# whisperward-osint

./: .dockerignore  .gitignore  ACCEPTABLE_USE.md  DEMO.md  DISCLAIMER.md  Dockerfile  LICENSE  PERFORMANCE_BENCHMARK.md  POLICY_BOUNDARY.md  Procfile  README.MD  ROADMAP.md  SYNTHETIC_TEST_CASES.md  THREAT_MODEL.md  TRAINING_DATA_SOURCES.md  behavioral_classifier.py  check_artifacts.py  config.py  conftest.py  correlation_engine.py  create_synthetic_case.py  csam_hash_detector.py  demo.py  docker-compose.yml  ethical_governance.md  fix_targets.py  ip_enrichment.py  populate_avatar_hashes.py  precision_recall_reporter.py  pyproject.toml  requirements.txt  risk_engine.py  run_real_evaluation.py  seed_demo.py  test_api_routes.py  test_case_log.py  test_correlation_engine.py  test_csam_hash_detector.py  test_integration.py  test_ip_enrichment.py  (+11 more)
core/: analyst_notes.py  attack_mapping.py  base_module.py  case_log.py  contracts.py  entity.py  evidence.py  evidence_packager.py  explanation.py  identity_graph.py  logger.py  platform_plugin.py  rate_limiter.py  redaction_engine.py  registry.py  report_generator.py  retention_enforcer.py  retry.py  risk_engine.py  risk_scoring.py  stix_export.py  structured_logger.py  timeline.py  token_bucket_limiter.py  update_threat_lists.py  utils.py
database/: __init__.py  db_manager.py  schema.sql
docs/: BEHAVIORAL_INDICATORS.md
modules/: __init__.py  ai_engine.py  behavioral.py  discord_osint.py  evidence_packager.py  graph_visualizer.py  metadata_extractor.py  platform_plugin.py  rag_engine.py  redaction_engine.py  referral_export.py  retention_enforcer.py  risk_scoring.py  roblox_osint.py  sherlock_integration.py
prompts/: analysis.prompt
scripts/: dump_findings.py  run_real_evaluation.py  threshold_sweep.py
tests/: test_analyst_notes.py  test_api_routes.py  test_attack_mapping.py  test_audit_trail.py  test_behavioral_classifier.py  test_case_log.py  test_cli_correlate.py  test_confidence_engine.py  test_correlation_engine.py  test_csam_hash_detector.py  test_discord_osint.py  test_entity_resolution.py  test_evidence_model.py  test_evidence_packager.py  test_explanation_objects.py  test_graph_aware_risk.py  test_identity_graph.py  test_integration.py  test_ip_enrichment.py  test_modules.py  test_phase3_surfacing.py  test_phase4_surfacing.py  test_platform_plugin.py  test_precision_recall_reporter.py  test_redaction_engine.py  test_referral_export.py  test_report_generator.py  test_retention_enforcer.py  test_risk_engine.py  test_stix_export.py  test_structured_logger.py  test_synthetic_profile_generator.py  test_timeline.py  test_token_bucket_limiter.py  test_update_threat_lists.py  test_whisperward.py
(+19 files in other folders)
